# procd

./: .gitignore  CMakeLists.txt  api.c  askfirst.c  coldplug.c  container.h  debug.c  early.c  hotplug-dispatch.c  hotplug-rule.c  hotplug.c  hotplug.h  inittab.c  instance.c  instance.h  libc-compat.h  log.c  log.h  logread.c  main.c  make_syscall_h.sh  md5.h  measure.c  mkdev.c  preinit.c  preload.h  procd.c  procd.h  rcS.c  rcS.h  service.c  service.h  service_validate.c  signal.c  state.c  syslog.c  syslog.h  system.c  sysupgrade.c  sysupgrade.h  (+10 more)
.github/workflows/: build.yml
initd/: early.c  init.c  init.h  mkdev.c  preinit.c  zram.c
jail/: capabilities.c  capabilities.h  cgroups-bpf.c  cgroups-bpf.h  cgroups.c  cgroups.h  console.c  elf.c  elf.h  fs.c  fs.h  jail.c  jail.h  log.h  netifd.c  netifd.h  preload.c  seccomp-bpf.h  seccomp-oci.c  seccomp-oci.h  seccomp-syscalls-helpers.h  seccomp.c  seccomp.h
plug/: coldplug.c  hotplug.c  hotplug.h  udevtrigger.c
service/: instance.c  instance.h  service.c  service.h  setlbf.c  trigger.c  validate.c  watch.c
trace/: preload.c  trace.c
upgraded/: CMakeLists.txt  upgraded  upgraded.c
utils/: askfirst.c  utils.c  utils.h
